030-software/fluxcd/apps/gatekeeper/constraints.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: container-must-have-limits
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    labelSelector:
      matchExpressions:
      - key: policy.gatekeeper.sh/ignore
        operator: NotIn
        values: ["true"]
      - key: policy.gatekeeper.sh/ignore-container-must-have-limits
        operator: NotIn
        values: ["true"]
  parameters:
    cpu: "-1"
    memory: "4096Mi"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostFilesystem
metadata:
  name: no-host-paths
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    labelSelector:
      matchExpressions:
      - key: policy.gatekeeper.sh/ignore
        operator: NotIn
        values: ["true"]
      - key: policy.gatekeeper.sh/ignore-no-host-paths
        operator: NotIn
        values: ["true"]
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNamespace
metadata:
  name: psp-host-namespace
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    labelSelector:
      matchExpressions:
      - key: policy.gatekeeper.sh/ignore
        operator: NotIn
        values: ["true"]
      - key: policy.gatekeeper.sh/ignore-psp-host-namespace
        operator: NotIn
        values: ["true"]
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: psp-privileged-container
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    labelSelector:
      matchExpressions:
      - key: policy.gatekeeper.sh/ignore
        operator: NotIn
        values: ["true"]
      - key: policy.gatekeeper.sh/ignore-psp-privileged-container
        operator: NotIn
        values: ["true"]
    excludedNamespaces: ["kube-system"]
  parameters:
    exemptImages:
    - "itsthenetwork/nfs-server-alpine:latest"
    - "ghcr.io/shokohsc/gateway:*"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata:
  name: psp-allow-privilege-escalation-container
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    labelSelector:
      matchExpressions:
      - key: policy.gatekeeper.sh/ignore
        operator: NotIn
        values: ["true"]
      - key: policy.gatekeeper.sh/ignore-psp-allow-privilege-escalation-container
        operator: NotIn
        values: ["true"]
  parameters:
    exemptImages:
    - "itsthenetwork/nfs-server-alpine:latest"
    - "ghcr.io/shokohsc/gateway:*"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPReadOnlyRootFilesystem
metadata:
  name: psp-readonlyrootfilesystem
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    labelSelector:
      matchExpressions:
      - key: policy.gatekeeper.sh/ignore
        operator: NotIn
        values: ["true"]
      - key: policy.gatekeeper.sh/ignore-psp-readonlyrootfilesystem
        operator: NotIn
        values: ["true"]
  # parameters:
  #   exemptImages:
  #   - "specialprogram"
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: psp-capabilities-baseline
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    labelSelector:
      matchExpressions:
      - key: policy.gatekeeper.sh/ignore
        operator: NotIn
        values: ["true"]
      - key: policy.gatekeeper.sh/ignore-psp-capabilities-baseline
        operator: NotIn
        values: ["true"]
  parameters:
    allowedCapabilities:
    - AUDIT_WRITE
    - CHOWN
    - DAC_OVERRIDE
    - FOWNER
    - FSETID
    - KILL
    - MKNOD
    - NET_BIND_SERVICE
    - NET_RAW
    - SETFCAP
    - SETGID
    - SETPCAP
    - SETUID
    - SYS_CHROOT
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: psp-pods-allowed-user-ranges
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    labelSelector:
      matchExpressions:
      - key: policy.gatekeeper.sh/ignore
        operator: NotIn
        values: ["true"]
      - key: policy.gatekeeper.sh/ignore-psp-pods-allowed-user-ranges
        operator: NotIn
        values: ["true"]
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot
    runAsGroup:
      rule: RunAsAny
    supplementalGroups:
      rule: RunAsAny
    fsGroup:
      rule: RunAsAny
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowAnonymous
metadata:
  name: no-anonymous
spec:
  match:
    kinds:
      - apiGroups: ["rbac.authorization.k8s.io"]
        kinds: ["ClusterRoleBinding"]
      - apiGroups: ["rbac.authorization.k8s.io"]
        kinds: ["RoleBinding"]
    labelSelector:
      matchExpressions:
      - key: policy.gatekeeper.sh/ignore
        operator: NotIn
        values: ["true"]
      - key: policy.gatekeeper.sh/ignore-no-anonymous
        operator: NotIn
        values: ["true"]
  parameters:
    disallowAuthenticated: true
    allowedRoles:
      - cluster-role-1
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPVolumeTypes
metadata:
  name: psp-volume-types
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    labelSelector:
      matchExpressions:
      - key: policy.gatekeeper.sh/ignore
        operator: NotIn
        values: ["true"]
      - key: policy.gatekeeper.sh/ignore-psp-volume-types
        operator: NotIn
        values: ["true"]
  parameters:
    volumes:
    # - "*" # * may be used to allow all volume types
    - configMap
    - csi
    - downwardAPI
    - emptyDir
    - ephemeral
    - image
    - nfs
    - persistentVolumeClaim
    - projected
    - secret
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPSeccompV2
metadata:
  name: psp-seccomp-baseline
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    labelSelector:
      matchExpressions:
      - key: policy.gatekeeper.sh/ignore
        operator: NotIn
        values: ["true"]
      - key: policy.gatekeeper.sh/ignore-psp-seccomp-baseline
        operator: NotIn
        values: ["true"]
  parameters:
    # exemptImages:
    # - nginx-exempt
    allowedProfiles:
    - RuntimeDefault
    # - Localhost
    # - not configured
    # allowedLocalhostFiles:
    # - "*"
